Correcting mistake where only 151  moves were stored. Adjusting CSS for the blurred background - no longer scrollable past the bottom of pokedex device

--- a/sourcecode/static/css/pokedescr.css
+++ b/sourcecode/static/css/pokedescr.css
@@ -1,7 +1,8 @@
 body{
+  position: relative;
   font-family: 'Nunito', sans-serif;
-  height: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  min-height: 930px;
   margin: 0;
 }
 
@@ -52,13 +53,16 @@ body{
 
 .backgroundImgContainer{
   position: absolute;
+  top: 0;
+  bottom: 0;
+  left:0;
+  right: 0;
   z-index: -10;
-  width:100%;
-  min-height: inherit;
   display:flex;
   justify-content:center;
   align-items:baseline;
-  overflow:hidden
+  overflow: hidden;
+
 }
 
 .backgroundImg{
